1. master-node-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: os-master
  labels:
    app: os-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: os-master
  template:
    metadata:
      labels:
        app: os-master
    spec:
      containers:
      - name: os-master
        image: opensearchproject/opensearch:1.2.0
        ports:
        - containerPort: 9300
          name: transport
        livenessProbe:
          tcpSocket:
            port: transport
          initialDelaySeconds: 20
          periodSeconds: 10
        volumeMounts:
        - name: os-data
          mountPath: /data
      volumes:
      - name: "os-data" 
        emptyDir:
          medium: ""
