3. data-node-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: os-data
  labels:
    app: os-data
spec:
  replicas: 2
  selector:
    matchLabels:
      app: os-data
  template:
    metadata:
      labels:
        app: os-data  
    spec:
      containers:
      - name: os-data
        image: opensearchproject/opensearch:1.2.0
        ports:
        - containerPort: 9200
          name: http
        - containerPort: 9300
          name: transport
        livenessProbe:
          tcpSocket:
            port: transport
          initialDelaySeconds: 20
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /_cluster/health
            port: http
          initialDelaySeconds: 20
          timeoutSeconds: 5
        volumeMounts:
        - name: os-data
          mountPath: /data
      volumes:
      - name: os-data
        emptyDir:
          medium: ""
