4. dashboard.yml
apiVersion: v1
kind: Service
metadata:
  name: os-dashboard
spec:
  selector:
    app: os-dashboard
  ports:
  - name: http
    port: 80
    targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: os-dashboard
  labels:
    app: os-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
     app: os-dashboard
  template:
    metadata:
      labels:
        app: os-dashboard
    spec:
      containers:
      - name: os-dashboard
        # we will be using our own dashboard image to bypass security
        # image: opensearchproject/opensearch-dashboards:1.2.0
        image: opensearch-dashboards-no-security:latest
        imagePullPolicy: Never 
        resources:
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5601
          name: http
        readinessProbe:
          httpGet:
            path: /api/status
            port: http
          initialDelaySeconds: 20
          timeoutSeconds: 5
