6. traefik.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  # - name: websecure
  #   port: 443
  #   protocol: TCP
  #   targetPort: 443
  selector:
    app: traefik
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: traefik
  name: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      containers:
      - name: traefik
        image: traefik:v2.3
        imagePullPolicy: IfNotPresent
        args:
        - --api.insecure
        - --api.dashboard=true
        - --accesslog
        - --entrypoints.web.address=:80
        # - --entrypoints.web.http.redirections.entrypoint.to=websecure
        # - --entrypoints.web.http.redirections.entrypoint.scheme=https
        # - --entrypoints.websecure.address=:443
        - --providers.kubernetescrd
        - --providers.kubernetesingress=true
        ports:
        - containerPort: 80
          name: web
          protocol: TCP
        # - containerPort: 443
        #   name: websecure
        #   protocol: TCP
        - containerPort: 8080
          name: admin
          protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      serviceAccount: traefik-ingress-controller
      serviceAccountName: traefik-ingress-controller
