service.yml
apiVersion: v1
kind: Service
metadata:
  name: opensearch-discovery
spec:
  selector:
    app: os-master
  ports:
  - name: transport
    port: 9300
    protocol: TCP
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: opensearch
spec:
  selector:
    app: os-data
  ports:
  - name: http
    port: 9200
  # type: LoadBalancer
