7. ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: opensearch-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.tls: "false"
    ingress.kubernetes.io/allowed-hosts: "*"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: os-dashboard
                port:
                  number: 80
